--- a/src/hometown.html
+++ b/src/hometown.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Hometown</title>
 </head>
+
 <body>
   <nav data-bs-theme="dark"></nav>
 
+  <div class="container py-4">
+    <h1 class="mb-3 text-center">Surabaya</h1>
+    <img src="img/surabaya/sura_baya.jpg" class="img-fluid img-thumbnail mx-auto d-block my-4" alt="Sura and Baya">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <h2 class="h4">About Surabaya</h2>
+        <p>
+          Surabaya is Indonesia's second-largest city and the capital of East Java. Known as <em>Kota Pahlawan</em>
+          (City of Heroes), it played a pivotal role in Indonesia's independence struggle. Today it's a
+          busy port city—centered around Tanjung Perak—mixing historic districts, riverside promenades,
+          and modern business hubs.
+        </p>
+        <p>
+          The climate is warm and humid year-round, perfect for night markets and street food adventures.
+          Landmarks include Tugu Pahlawan, the Suramadu Bridge, old Arab and Chinatown quarters, and the
+          Submarine Monument along the Kalimas River.
+        </p>
+      </div>
+    </div>
+  </div>
+
   <script type="module" src="./js/main.js"></script>
 </body>
+
 </html>
