--- a/src/profile.html
+++ b/src/profile.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Profile</title>
 </head>
+
 <body>
   <nav data-bs-theme="dark"></nav>
 
-  <div class="container">
-    
+  <div class="container my-5 text-center">
+    <img src="img/profile.jpg" class="img-fluid img-thumbnail rounded mb-3"
+      style="max-width: 400px;" alt="My Photo">
+
+    <div class="container mb-4">
+      <h2>Hello, My name is Jalu Cahyo Senodiputro</h2>
+      <p class="lead">
+        I'm a computer science student that interested in software engineering, robotics and cybersecurity.
+        I enjoy building projects, doing CTF challenges, and dabbles in a little bit of electronics.
+      </p>
+      <p class="lead">
+        I'm from Surabaya and 19 Years old as of 2025 (damn i'm gonna be 20). I'm currently on my third semester at Institut Teknologi Sepuluh Nopember
+        and i'm also a part of <a href="https://www.instagram.com/banyubramanta.its" target="_blank" class="link-info"> Banyubramanta Underwater Robotics Team.</a>
+      </p>
+    </div>
+
+    <!-- Social Media Links -->
+    <div class="d-flex justify-content-center gap-3 mt-4">
+      <a href="https://github.com/Grydr" target="_blank"  class="btn btn-outline-primary">
+        <i class="bi bi-github"></i>
+      </a>
+      <a href="https://www.instagram.com/gryd.re" target="_blank" class="btn btn-outline-primary">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/jalu-cahyo-senodiputro-18456b210" target="_blank" class="btn btn-outline-primary">
+        <i class="bi bi-linkedin"></i>
+      </a>
+    </div>
   </div>
 
   <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/profile.js"></script>
 </body>
+
 </html>
