--- a/src/food.html
+++ b/src/food.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
