--- a/src/profile.html
+++ b/src/profile.html
@@ -40,8 +40,8 @@
     </div>
   </div>
 
-  <script type="module" src="./js/main.js"></script>
-  <script type="module" src="./js/profile.js"></script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/profile.js"></script>
 </body>
 
 </html>
