--- a/src/tourist.html
+++ b/src/tourist.html
@@ -59,7 +59,7 @@
   </div>
 
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
