fix homepage card responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -38,40 +38,37 @@
   </div>
 
   <div class="container">
-    <div class="row row-cols-2 g-3">
-      <div class="col">
-        <div class="card border-primary border-1">
-          <img src="img/surabaya/sura_baya.jpg" class="card-img-top" height="400">
+    <div class="row row-cols-md-2 g-3 align-items-stretch">
+      <div class="col-md-6">
+        <div class="card border-primary border-1 h-100">
+          <img src="img/surabaya/sura_baya.jpg" class="card-img-top img h-100 w-100" height="400">
           <div class="card-body">
             <h5 class="card-title">Hometown</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
-              content.</p>
+            <p class="card-text">My Hometown, Surabaya.</p>
             <a href="hometown.html" class="btn btn-primary">See Hometown</a>
           </div>
         </div>
       </div>
 
-      <div class="col">
-        <div class="card border-primary border-1">
-          <img src="img/surabaya/rawon.jpg" class="card-img-top" height="400">
+      <div class="col-md-6">
+        <div class="card border-primary border-1 h-100">
+          <img src="img/surabaya/rawon.jpg" class="card-img-top img-fluid h-100 w-100" height="400">
           <div class="card-body">
             <h5 class="card-title">Local Food</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
-              content.</p>
+            <p class="card-text">The Food you can found in my hometown.</p>
             <a href="food.html" class="btn btn-primary">See Local Food</a>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="row mt-3 row-cols-2 justify-content-center">
+    <div class="row mt-3 row-cols-md-2 justify-content-center">
       <div class="col">
-        <div class="card border-primary border-1">
-          <img src="img/surabaya/Submarine_Monument_Surabaya_2.JPG" class="card-img-top" height="400">
+        <div class="card border-primary border-1 h-auto">
+          <img src="img/surabaya/Submarine_Monument_Surabaya_2.JPG" class="card-img-top img-fluid" height="400">
           <div class="card-body">
             <h5 class="card-title">Tourist Places</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
-              content.</p>
+            <p class="card-text">Some place you can visit while you're staying here.</p>
             <a href="tourist.html" class="btn btn-primary">See Tourist Places</a>
           </div>
         </div>
