fix a profile and carousel responsiveness

--- a/src/food.html
+++ b/src/food.html
@@ -24,7 +24,7 @@
 
       <div class="carousel-inner rounded overflow-hidden">
         <div class="carousel-item active">
-          <img src="img/surabaya/rawon.jpg" class="d-block w-75 mx-auto" height="600"
+          <img src="img/surabaya/rawon.jpg" class="d-block w-75 mx-auto"
             alt="Rawon">
         </div>
 
