--- a/src/profile.html
+++ b/src/profile.html
@@ -11,10 +11,10 @@
   <nav data-bs-theme="dark"></nav>
 
   <div class="container my-5 text-center">
-    <img src="img/profile.jpg" class="img-fluid img-thumbnail rounded mb-3"
+    <img src="img/profile.jpg" class="img-fluid img-thumbnail rounded mb-3 w-100 h-100"
       style="max-width: 400px;" alt="My Photo">
 
-    <div class="container mb-4">
+    <div class="container-md container-fluid-sm mb-4">
       <h2>Hello, My name is Jalu Cahyo Senodiputro</h2>
       <p class="lead">
         I'm a computer science student that interested in software engineering, robotics and cybersecurity.
@@ -27,7 +27,7 @@
     </div>
 
     <!-- Social Media Links -->
-    <div class="d-flex justify-content-center gap-3 mt-4">
+    <div class="d-flex flex-wrap flex-md-nowrap justify-content-center gap-3 mt-4">
       <a href="https://github.com/Grydr" target="_blank"  class="btn btn-outline-primary">
         <i class="bi bi-github"></i>
       </a>
