--- a/src/tourist.html
+++ b/src/tourist.html
@@ -23,7 +23,7 @@
 
       <div class="carousel-inner rounded overflow-hidden">
         <div class="carousel-item active">
-          <img src="img/surabaya/Tugu_Pahlawan_Surabaya.jpg" class="d-block w-75 mx-auto" height="600" alt="Tugu Pahlawan">
+          <img src="img/surabaya/Tugu_Pahlawan_Surabaya.jpg" class="d-block w-75 mx-auto" alt="Tugu Pahlawan">
           <div class="carousel-caption d-none d-md-block">
             <h3>Tugu Pahlawan</h3>
             <p class="fs-4">Heroes Monument commemorating the 10 November 1945 battle.</p>
